--- a/procurement/src/main/resources/com/bsd/process/procurement/ApprovePurchaseRequest-taskform.form
+++ b/procurement/src/main/resources/com/bsd/process/procurement/ApprovePurchaseRequest-taskform.form
@@ -3,54 +3,57 @@
 <property name="name" value="ApprovePurchaseRequest-taskform.form"/>
 <property name="displayMode" value="default"/>
 <property name="status" value="0"/>
-<field position="5" name="prDetails_requestNo" type="InputText" id="1216729687">
+<field position="4" name="prApproved" type="CheckBox" id="1999100942">
 <property name="fieldRequired" value="false"/>
-<property name="label" value="quot;enquot;,quot;requestNo (prDetails)quot;"/>
-<property name="readonly" value="false"/>
-<property name="inputBinding" value="purchaseRequestIN/requestNo"/>
-<property name="fieldClass" value="java.lang.String"/>
-</field>
-<field position="2" name="prDetails_department" type="InputText" id="503795905">
-<property name="fieldRequired" value="false"/>
-<property name="label" value="quot;enquot;,quot;department (prDetails)quot;"/>
-<property name="readonly" value="false"/>
-<property name="inputBinding" value="purchaseRequestIN/department"/>
-<property name="fieldClass" value="java.lang.String"/>
-</field>
-<field position="6" name="prDetails_requestedBy" type="InputText" id="33442841">
-<property name="fieldRequired" value="false"/>
-<property name="label" value="quot;enquot;,quot;requestedBy (prDetails)quot;"/>
-<property name="readonly" value="false"/>
-<property name="inputBinding" value="purchaseRequestIN/requestedBy"/>
-<property name="fieldClass" value="java.lang.String"/>
-</field>
-<field position="0" name="prApproved" type="CheckBox" id="1999100942">
-<property name="fieldRequired" value="false"/>
+<property name="groupWithPrevious" value="false"/>
 <property name="label" value="quot;enquot;,quot;prApprovedOUT (prApproved)quot;"/>
 <property name="readonly" value="false"/>
 <property name="outputBinding" value="prApprovedOUT"/>
 <property name="fieldClass" value="java.lang.Boolean"/>
 </field>
-<field position="1" name="prDetails_approver" type="Subform" id="600719924">
+<field position="0" name="prDetails_department" type="InputText" id="503795905">
 <property name="fieldRequired" value="false"/>
-<property name="label" value="quot;enquot;,quot;approver (prDetails)quot;"/>
-<property name="readonly" value="false"/>
-<property name="inputBinding" value="purchaseRequestIN/approver"/>
-<property name="fieldClass" value="java.lang.Object"/>
+<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;department (prDetails)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="readonly" value="true"/>
+<property name="isHTML" value="false"/>
+<property name="hideContent" value="false"/>
+<property name="inputBinding" value="purchaseRequestIN/department"/>
+<property name="fieldClass" value="java.lang.String"/>
 </field>
-<field position="4" name="prDetails_requestDate" type="InputText" id="1032314764">
+<field position="1" name="prDetails_requestDate" type="InputText" id="1032314764">
 <property name="fieldRequired" value="false"/>
-<property name="label" value="quot;enquot;,quot;requestDate (prDetails)quot;"/>
-<property name="readonly" value="false"/>
+<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;requestDate (prDetails)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="readonly" value="true"/>
+<property name="isHTML" value="false"/>
+<property name="hideContent" value="false"/>
 <property name="inputBinding" value="purchaseRequestIN/requestDate"/>
 <property name="fieldClass" value="java.lang.String"/>
 </field>
-<field position="3" name="prDetails_items" bag-type="com.bsd.oms.process.PurchaseItem" type="MultipleSubform" id="1680739472">
+<field position="2" name="prDetails_requestNo" type="InputText" id="1216729687">
 <property name="fieldRequired" value="false"/>
-<property name="label" value="quot;enquot;,quot;items (prDetails)quot;"/>
-<property name="readonly" value="false"/>
-<property name="inputBinding" value="purchaseRequestIN/items"/>
-<property name="fieldClass" value="java.util.List"/>
+<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;requestNo (prDetails)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="readonly" value="true"/>
+<property name="isHTML" value="false"/>
+<property name="hideContent" value="false"/>
+<property name="inputBinding" value="purchaseRequestIN/requestNo"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="3" name="prDetails_requestedBy" type="InputText" id="33442841">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;requestedBy (prDetails)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="readonly" value="true"/>
+<property name="isHTML" value="false"/>
+<property name="hideContent" value="false"/>
+<property name="inputBinding" value="purchaseRequestIN/requestedBy"/>
+<property name="fieldClass" value="java.lang.String"/>
 </field>
 <dataHolder inputId="" name="#FF54A7" type="basicType" outId="prApprovedOUT" value="java.lang.Boolean" id="prApproved"/>
 <dataHolder supportedType="className" inputId="purchaseRequestIN" name="#E9E371" type="dataModelerEntry" outId="" value="com.bsd.oms.process.PurchaseRequest" id="prDetails"/>
