--- a/procurement/src/main/resources/com/bsd/process/procurement/QuotationSubmission-taskform.form
+++ b/procurement/src/main/resources/com/bsd/process/procurement/QuotationSubmission-taskform.form
@@ -3,69 +3,20 @@
 <property name="name" value="QuotationSubmission-taskform.form"/>
 <property name="displayMode" value="default"/>
 <property name="status" value="0"/>
-<field position="0" name="prDetails_approver" type="Subform" id="924320980">
-<property name="fieldRequired" value="false"/>
-<property name="label" value="quot;enquot;,quot;approver (prDetails)quot;"/>
-<property name="readonly" value="false"/>
-<property name="inputBinding" value="prDetailsIN/approver"/>
-<property name="fieldClass" value="java.lang.Object"/>
-</field>
-<field position="1" name="prDetails_department" type="InputText" id="557405496">
-<property name="fieldRequired" value="false"/>
-<property name="label" value="quot;enquot;,quot;department (prDetails)quot;"/>
-<property name="readonly" value="false"/>
-<property name="inputBinding" value="prDetailsIN/department"/>
-<property name="fieldClass" value="java.lang.String"/>
-</field>
-<field position="2" name="prDetails_id" type="InputTextPrimitiveLong" id="930907297">
+<field position="0" name="prDetails_id" type="InputTextPrimitiveLong" id="930907297">
 <property name="fieldRequired" value="false"/>
 <property name="label" value="quot;enquot;,quot;id (prDetails)quot;"/>
 <property name="readonly" value="false"/>
 <property name="inputBinding" value="prDetailsIN/id"/>
 <property name="fieldClass" value="long"/>
 </field>
-<field position="3" name="prDetails_items" bag-type="com.bsd.oms.process.PurchaseItem" type="MultipleSubform" id="676349895">
-<property name="fieldRequired" value="false"/>
-<property name="label" value="quot;enquot;,quot;items (prDetails)quot;"/>
-<property name="readonly" value="false"/>
-<property name="inputBinding" value="prDetailsIN/items"/>
-<property name="fieldClass" value="java.util.List"/>
-</field>
-<field position="4" name="prDetails_requestDate" type="InputText" id="933674198">
-<property name="fieldRequired" value="false"/>
-<property name="label" value="quot;enquot;,quot;requestDate (prDetails)quot;"/>
-<property name="readonly" value="false"/>
-<property name="inputBinding" value="prDetailsIN/requestDate"/>
-<property name="fieldClass" value="java.lang.String"/>
-</field>
-<field position="5" name="prDetails_requestNo" type="InputText" id="1866739797">
+<field position="1" name="prDetails_requestNo" type="InputText" id="1866739797">
 <property name="fieldRequired" value="false"/>
 <property name="label" value="quot;enquot;,quot;requestNo (prDetails)quot;"/>
 <property name="readonly" value="false"/>
 <property name="inputBinding" value="prDetailsIN/requestNo"/>
 <property name="fieldClass" value="java.lang.String"/>
 </field>
-<field position="6" name="prDetails_requestedBy" type="InputText" id="882761699">
-<property name="fieldRequired" value="false"/>
-<property name="label" value="quot;enquot;,quot;requestedBy (prDetails)quot;"/>
-<property name="readonly" value="false"/>
-<property name="inputBinding" value="prDetailsIN/requestedBy"/>
-<property name="fieldClass" value="java.lang.String"/>
-</field>
-<field position="7" name="prQuotations_purchaseRequest" type="Subform" id="1983749297">
-<property name="fieldRequired" value="false"/>
-<property name="label" value="quot;enquot;,quot;purchaseRequest (prQuotations)quot;"/>
-<property name="readonly" value="false"/>
-<property name="outputBinding" value="prQuotationsOUT/purchaseRequest"/>
-<property name="fieldClass" value="java.lang.Object"/>
-</field>
-<field position="8" name="prQuotations_quotations" bag-type="com.bsd.oms.process.Quotation" type="MultipleSubform" id="1787831266">
-<property name="fieldRequired" value="false"/>
-<property name="label" value="quot;enquot;,quot;quotations (prQuotations)quot;"/>
-<property name="readonly" value="false"/>
-<property name="outputBinding" value="prQuotationsOUT/quotations"/>
-<property name="fieldClass" value="java.util.List"/>
-</field>
-<dataHolder inputId="prDetailsIN" name="#E9E371" type="dataModelerEntry" outId="" value="com.bsd.oms.process.PurchaseRequest" id="prDetails"/>
-<dataHolder inputId="" name="#BBBBBB" type="dataModelerEntry" outId="prQuotationsOUT" value="com.bsd.oms.process.PRQuotations" id="prQuotations"/>
+<dataHolder supportedType="className" inputId="prDetailsIN" name="#E9E371" type="dataModelerEntry" outId="" value="com.bsd.oms.process.PurchaseRequest" id="prDetails"/>
+<dataHolder supportedType="className" inputId="" name="#BBBBBB" type="dataModelerEntry" outId="prQuotationsOUT" value="com.bsd.oms.process.PRQuotations" id="prQuotations"/>
 </form>
